--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import 'tailwindcss';
+@font-face {
+	font-family: 'Courier Prime';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url('./assets/fonts/CourierPrime-Regular.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Courier Prime';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url('./assets/fonts/CourierPrime-Bold.woff2') format('woff2');
+}
 
 @theme {
 	--color-night-black: #000814;
@@ -7,7 +21,11 @@
 	--color-regular-blue: #003566;
 	--color-highlight-yellow: #ffc300;
 	--color-regular-yellow: #ffd60a;
-	--font-courier-prime: 'Courier Prime', sans-serif;
+	--font-courier-prime: 'Courier Prime', Courier, monospace;
+}
+
+body {
+	font-family: var(--font-courier-prime);
 }
 
 /* 
